networks.tf
#Creacion de redes y subredes
resource "azurerm_virtual_network" "red_empresa" {
  name                = "${var.prefix}-red-empresa"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
}

resource "azurerm_subnet" "subred_dmz" {
  name                 = "${var.prefix}-subred-dmz"
  resource_group_name  = azurerm_resource_group.resource_gp.name
  virtual_network_name = azurerm_virtual_network.red_empresa.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_subnet" "subred_interna" {
  name                 = "${var.prefix}-subred-interna"
  resource_group_name  = azurerm_resource_group.resource_gp.name
  virtual_network_name = azurerm_virtual_network.red_empresa.name
  address_prefixes     = ["10.0.2.0/24"]
}

resource "azurerm_network_interface" "interfaz_servidor_web" {
  name                = "${var.prefix}-interfaz-web"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name

  ip_configuration {
    name                          = "configuracion-dmz"
    subnet_id                     = azurerm_subnet.subred_dmz.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.ip_servidor_web.id
  }
}

resource "azurerm_public_ip" "ip_servidor_web" {
  name                = "${var.prefix}-ip-servidor-web"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
  allocation_method   = "Dynamic"
  domain_name_label = "tfg2022"
}

resource "azurerm_network_interface" "interfaz_servidor_db" {
  name                = "${var.prefix}-interfaz-db"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name

  ip_configuration {
    name                          = "configuracion-db"
    subnet_id                     = azurerm_subnet.subred_interna.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.ip_servidor_db.id
  }
}
resource "azurerm_public_ip" "ip_servidor_db" {
  name                = "${var.prefix}-ip-servidor-db"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
  allocation_method   = "Dynamic"
}

resource "azurerm_network_interface" "interfaz_servidor_ad" {
  name                = "${var.prefix}-interfaz-ad"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name

  ip_configuration {
    name                          = "configuracion-ad"
    subnet_id                     = azurerm_subnet.subred_interna.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.ip_servidor_ad.id
  }
}
resource "azurerm_public_ip" "ip_servidor_ad"{
  name                = "${var.prefix}-ip-servidor-ad"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
  allocation_method   = "Dynamic"
}
