ngs.tf
#Grupos NGS
resource "azurerm_network_security_group" "dmzNSG" {
  name                = "${var.prefix}-dmzNSG"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
}

resource "azurerm_network_security_group" "internaNSG" {
  name                = "${var.prefix}-internaNSG"
  location            = azurerm_resource_group.resource_gp.location
  resource_group_name = azurerm_resource_group.resource_gp.name
}

#Asociacion de subredes con grupos NSG
resource "azurerm_subnet_network_security_group_association" "interna_asociacion" {
  subnet_id                 = azurerm_subnet.subred_interna.id
  network_security_group_id = azurerm_network_security_group.internaNSG.id
}

resource "azurerm_subnet_network_security_group_association" "dmz_asociacion" {
  subnet_id                 = azurerm_subnet.subred_dmz.id
  network_security_group_id = azurerm_network_security_group.dmzNSG.id
}

#Asociacion de interfaces con grupos NGS
resource "azurerm_network_interface_security_group_association" "dmz" {
  network_interface_id      = azurerm_network_interface.interfaz_servidor_web.id
  network_security_group_id = azurerm_network_security_group.dmzNSG.id
}


resource "azurerm_network_interface_security_group_association" "interna1" {
  network_interface_id      = azurerm_network_interface.interfaz_servidor_db.id
  network_security_group_id = azurerm_network_security_group.internaNSG.id
}

resource "azurerm_network_interface_security_group_association" "interna2" {
  network_interface_id      = azurerm_network_interface.interfaz_servidor_ad.id
  network_security_group_id = azurerm_network_security_group.internaNSG.id
}
