firewall.tf
/*
#Reglas firewall para grupo externa
resource "azurerm_network_security_rule" "rdp_externa" {
  name                        = "rdp_externa"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3389"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.externalNSG.name
}

resource "azurerm_network_security_rule" "permitir_entrada" {
  name                        = "permitir_entrada"
  priority                    = 101
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.externalNSG.name
}

resource "azurerm_network_security_rule" "permitir_salida" {
  name                        = "permitir_salida"
  priority                    = 102
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.externalNSG.name
}
*/

#Reglas firewall para grupo dmz
resource "azurerm_network_security_rule" "rdp_dmz" {
  name                        = "rdp_dmz"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3389"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}

#Puerto 80 es el de HTTP
resource "azurerm_network_security_rule" "puerto_web" {
  name                        = "puerto_web"
  priority                    = 101
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "80"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}

#Puerto 8080 es donde esta la web con la vulnerabilidad
resource "azurerm_network_security_rule" "puerto_web2" {
  name                        = "puerto_web2"
  priority                    = 102
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "8080"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}

#Puerto 443 es el de HTTPS
resource "azurerm_network_security_rule" "puerto_web3" {
  name                        = "puerto_web3"
  priority                    = 103
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "443"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}

resource "azurerm_network_security_rule" "permitir_ssh" {
  name                        = "ssh"
  priority                    = 105
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}

resource "azurerm_network_security_rule" "permitir_trafico" {
  name                        = "permitir_trafico"
  priority                    = 106
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.dmzNSG.name
}


#Reglas firewall para grupo interna
resource "azurerm_network_security_rule" "rdp_interna" {
  name                        = "rdp_interna"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Deny"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3389"
  source_address_prefix       = "Internet"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}
resource "azurerm_network_security_rule" "dmz_subred1" {
  name                        = "block_dmz"
  priority                    = 123
  direction                   = "Inbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = azurerm_linux_virtual_machine.servidor_web.public_ip_address
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}

resource "azurerm_network_security_rule" "permitir_ssh_internal" {
  name                        = "ssh_internal"
  priority                    = 102
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}
/*
resource "azurerm_network_security_rule" "permitir_ssh_internal2" {
  name                        = "ssh_internal2"
  priority                    = 101
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "Internet"
  destination_address_prefix  = azurerm_linux_virtual_machine.bastion_scripts.public_ip_address
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}
*/
resource "azurerm_network_security_rule" "db"{
  name                        = "permitir_db"
  priority                    = 103
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3306"
  source_address_prefix       = azurerm_windows_virtual_machine.servidor_ad.public_ip_address
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}

resource "azurerm_network_security_rule" "permitir_interna1" {
  name                        = "permitir_interna1"
  priority                    = 104
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefixes     = [azurerm_windows_virtual_machine.servidor_ad.public_ip_address, azurerm_linux_virtual_machine.servidor_db.public_ip_address]
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}


resource "azurerm_network_security_rule" "internet" {
  name                        = "permitir_internet"
  priority                    = 200
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "Internet"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}

resource "azurerm_network_security_rule" "permitir_interna2" {
  name                        = "permitir_interna2"
  priority                    = 201
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefixes     = [azurerm_windows_virtual_machine.servidor_ad.public_ip_address, azurerm_linux_virtual_machine.servidor_db.public_ip_address]
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}

resource "azurerm_network_security_rule" "dmz_subred" {
  name                        = "permitir_dmz"
  priority                    = 202
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = azurerm_linux_virtual_machine.servidor_web.public_ip_address
  resource_group_name         = azurerm_resource_group.resource_gp.name
  network_security_group_name = azurerm_network_security_group.internalNSG.name
}
